Fixed banner alignment

--- a/src/themes/default/includes/_header.scss
+++ b/src/themes/default/includes/_header.scss
@@ -7,15 +7,14 @@ body > header {
     a { color: $color-header; }
 
     > .container {
-        h1, h2, h1 a {
+        h1, h2 {
             display:inline-block;
             margin: .2em 0 .3em 0;
             height:1.5rem; line-height:1.5rem;
-            //vertical-align:middle;
+            vertical-align:middle;
         }
         h1 a {
             font-size:1.5rem; font-weight:normal;
-            //margin:0;
         }
         h2 {
             font-size:.8rem;
